Move averithing to processes